--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,25 +6,24 @@
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
-  <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 
   <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="./css/syntax.css">
+  <link rel="stylesheet" href="/css/syntax.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
-  <script type="text/javascript" src='./bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
 
 </head>
 <body>
 
   <div class="container">
-    <div class="header">
-      <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-      <a class="extra" href="/">home</a>
+    <div class="page-header">
+      <h1 class="title">{{ page.title }}</h1>
     </div>
 
     {{ content }}
