More html and plan

--- a/_layouts/session.html
+++ b/_layouts/session.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<div class="page-header">
+  <h1>{{page.title }} <small>{{ page.strapline}}</small></h1>
+</div>
+
 <div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	{% for task in page.tasks %}
