--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
 
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="/assets/jquery-1.10.0.js"></script>
 
   <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='/assets/custom.js'></script>
 
 </head>
 <body>
