--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css">
 
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css">
+  <!-- Google webfont link -->
+<link href='http://fonts.googleapis.com/css?family=Arvo:700|Titillium+Web:900' rel='stylesheet' type='text/css'>
+
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
@@ -20,7 +24,7 @@
   <script type="text/javascript" src='/assets/custom.js'></script>
 
 </head>
-<body>
+<body class="{{ page.cssclass }}">
 
   <div class="container">
 
